Updated Calendar overlapping issue

--- a/assets/sass/_extra.scss
+++ b/assets/sass/_extra.scss
@@ -4005,7 +4005,7 @@ body.single-dining #hero--single figure img.desktop {
 .tribe-events-view--shortcode {
   .tribe-events-calendar-month__events:has(.tribe-events-calendar-month__multiday-event-wrapper) {
     article.hentry {
-      margin-top: 25px!important;
+      margin-top: 15px!important;
       position: relative;
       z-index: 50;
     }
